@@ -1,5 +1,6 @@
 Adminer dev:
 MySQL: Display default values of binary columns
+MySQL: Allow setting default values of json column
 MariaDB: Don't display NULL as default value (regression from 5.0.0)
 PostgreSQL PDO: Escape bytea values (bug #218)
 MS SQL: Fix editing rows with datetime column in primary key
